# OptimizedTrader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildrun.sh  visualize.py
include/: DataFetch.hpp  DataStructure.hpp  FibAlgoTrader.hpp  HelperFunctions.hpp  OrderManager.hpp  RealTimeNM.hpp
input/: ALGOUSDT.csv
scripts/: binance_fetch.py  ccxt_fetch.py
src/: DataFetch.cpp  FibAlgoTrader.cpp  HelperFunctions.cpp  OrderManager.cpp  RealTimeNM.cpp  example.cpp
